--- a/app/src/main/res/layout/activity_timeline.xml
+++ b/app/src/main/res/layout/activity_timeline.xml
@@ -4,9 +4,9 @@
     android:id="@+id/activity_timeline"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="org.ethp.codepath.twitterclient.TimelineActivity">
+    tools:context="org.ethp.codepath.twitterclient.activities.TimelineActivity">
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -15,6 +15,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="false"
-        android:id="@+id/lvTweets"></ListView>
+        android:id="@+id/rvTweets">
+    </android.support.v7.widget.RecyclerView>
 
 </RelativeLayout>
