--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="org.ethp.codepath.twitterclient.LoginActivity" >
+    tools:context="org.ethp.codepath.twitterclient.activities.LoginActivity" >
 
     <Button
         android:layout_width="match_parent"
