--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -40,6 +40,8 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:id="@+id/tvText"
+        android:autoLink="all"
+        android:linksClickable="true"
         android:layout_below="@+id/tvUserName"
         android:layout_alignParentBottom="true"
         android:layout_toRightOf="@+id/ivProfileImage"
