--- a/app/src/main/res/layout/activity_timeline.xml
+++ b/app/src/main/res/layout/activity_timeline.xml
@@ -34,13 +34,14 @@
     </RelativeLayout>
 
     <android.support.design.widget.FloatingActionButton
+        android:id="@+id/btSendTweet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         app:layout_anchor="@id/rvTweets"
         app:layout_anchorGravity="bottom|right|end"
         app:fabSize="normal"
-        android:src="@drawable/twitter"
+        app:srcCompat="@drawable/twitter"
         android:tint="@android:color/holo_blue_light"
         android:clickable="true" />
 
