--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -37,7 +37,7 @@
 
     <TextView
         tools:text="Some Tweet message..."
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/tvText"
         android:autoLink="all"
