--- a/app/src/main/res/layout/activity_timeline.xml
+++ b/app/src/main/res/layout/activity_timeline.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     tools:context="org.ethp.codepath.twitterclient.activities.TimelineActivity">
 
     <include layout="@layout/toolbar_main"
@@ -13,6 +14,7 @@
 
     <RelativeLayout
         android:id="@+id/activity_timeline"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -26,7 +28,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:clipToPadding="false"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentEnd="false"
                 android:layout_alignParentRight="true"
