--- a/app/src/main/res/layout/activity_timeline.xml
+++ b/app/src/main/res/layout/activity_timeline.xml
@@ -12,21 +12,34 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-    <fragment
+    <LinearLayout
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/fragmentTweetsList"
-        android:name="org.ethp.codepath.twitterclient.fragments.HomeTimelineFragment"
-        tools:layout="@layout/fragment_tweets_list"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        android:orientation="vertical">
 
+        <com.astuetz.PagerSlidingTabStrip
+            android:id="@+id/tabs"
+            app:pstsShouldExpand="true"
+            app:pstsTextAllCaps="true"
+            android:layout_width="match_parent"
+            android:layout_height="48dp" />
+
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewpager"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/white" />
+
+    </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/btSendTweet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        app:layout_anchor="@id/fragmentTweetsList"
+        app:layout_anchor="@id/viewpager"
         app:layout_anchorGravity="bottom|right|end"
         app:fabSize="normal"
         app:srcCompat="@drawable/twitter"
