--- a/app/src/main/res/layout/fragment_compose_tweet.xml
+++ b/app/src/main/res/layout/fragment_compose_tweet.xml
@@ -23,12 +23,33 @@
         android:layout_alignParentStart="true"
         android:background="@android:color/transparent" />
 
+    <ImageView
+        android:id="@+id/ivArrowDown"
+        android:layout_width="14dp"
+        android:layout_height="14dp"
+        android:layout_below="@+id/ivClose"
+        android:layout_marginTop="2dp"
+        android:layout_marginLeft="14dp"
+        android:tint="@color/twitterItemIcons"
+        tools:src="@drawable/arrow_down" />
+
+    <TextView
+        android:id="@+id/tvInReplyTo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/ivClose"
+        android:layout_toRightOf="@id/ivArrowDown"
+        android:layout_marginLeft="2dp"
+        tools:text="@string/tweet_in_reply_to"
+        />
+
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="14dp"
         android:layout_marginLeft="14dp"
         android:layout_marginRight="14dp"
-        android:layout_below="@+id/ivClose"
+        android:layout_below="@+id/tvInReplyTo"
         android:id="@+id/etTweet"
         android:ems="10"
         android:background="@null"
